tests/NormalTests/paczka1/fuzzy1/87166256.err
Error in line 1: L0oO1 A229 17,0
Error in line 16: LacpLNFma S304 75,8
Error in line 28: fzpejAo A951 86,8
